<resources>
    <string name="app_name">AVANZO Test Simulator</string>
    <string name="title_home">Home</string>
    <string name="title_results">Results</string>
    <string name="title_ranking">Ranking</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hint_email_login">Correo electrónico</string>
    <string name="hint_password_login">Contraseña</string>
    <string name="reset_password_login">Olvidé Contraseña</string>
    <string name="submit_login">Iniciar Sesión</string>
    <string name="info_login">¿No posees una cuenta?</string>
    <string name="create_account_login">Crear Cuenta</string>
    <string name="back">Regresar</string>
    <string name="register">Registro</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="terms">Acepto los términos y condiciones</string>
    <string name="info_register">¿Ya posees una cuenta?</string>
    <string name="reset_account">Recuperación de cuenta</string>
    <string name="info_reset_account">Ingresa tu correo electrónico para recuperar tu cuenta</string>
    <string name="continue_button">Continuar</string>
    <string name="welcome_text">¡Pon a prueba tus conocimientos!</string>
    <string name="results_title">Notas</string>
    <string name="subject_default">Materia</string>
    <string name="ranking_title">Ranking</string>
    <string name="name_title">Name</string>
    <string name="number_default">1</string>
    <string name="points_default">x</string>
    <string name="points_title">puntos</string>
    <string name="questions_default">15 preguntas</string>
    <string name="time_default">45 min</string>
    <string name="details_text">Indicaciones</string>
    <string name="info_points">Obtén hasta 150 puntos</string>
    <string name="about_test">Acerca de esta prueba</string>
    <string name="info1_test">Modo Prueba</string>
    <string name="sub_info1_test">Sin retroceso entre preguntas</string>
    <string name="sub2_info_test">Duración total de la prueba</string>
    <string name="info3_test">Gana puntos</string>
    <string name="sub3_info_test">10 puntos por respuesta correcta</string>
    <string name="inst_title">Lee las instrucciones cuidadosamente</string>
    <string name="inst_1">Toca en las opciones para seleccionar la respuesta correcta</string>
    <string name="inst_2">Una vez seleccionada la respuesta, no puedes cambiar tu elección</string>
    <string name="inst_3">Se mostrará el puntaje final al responder la última pregunta o al finalizar el tiempo</string>
    <string name="begin_test">Realizar prueba</string>
    <string name="begin_training">o Practicar</string>
    <string name="timer_default">20:00</string>
    <string name="question_default_title">Question</string>
    <string name="option_a">A</string>
    <string name="progress_default">0/15</string>
    <string name="option_b">B</string>
    <string name="option_c">C</string>
    <string name="option_d">D</string>
    <string name="answer_default">Respuesta</string>
    <string name="profile_title">Mi perfil</string>
    <string name="institution">Institución</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="update">Actualizar contraseña</string>
    <string name="final_score_title">Tu puntaje final es:</string>
    <string name="correct_ans">Correcto</string>
    <string name="incorrect_ans">Incorrecto</string>
    <string name="correct_ans_num">7</string>
    <string name="incorrect_ans_num">8</string>
    <string name="See_points">Ver puntos</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="confirm_new_password">Confirmar nueva contraseña</string>
    <string name="exit">Salir</string>
    <string name="show_password">Mostrar contraseña</string>
    <string name="top_10">Top 10</string>
</resources>