<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:foreground="@drawable/border_black"
            app:cardCornerRadius="7dp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/subjectIcon"
                    android:layout_width="85dp"
                    android:layout_marginLeft="@dimen/small_gap"
                    android:layout_height="85dp"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:src="@drawable/math_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/subjectTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subject_default"
                    android:layout_marginLeft="@dimen/small_gap"
                    style="@style/GilroyFontBold"
                    android:textStyle="bold"
                    android:textColor="@color/main"
                    android:textSize="16dp"
                    app:layout_constraintStart_toEndOf="@+id/subjectIcon"
                    app:layout_constraintBottom_toTopOf="@+id/numberSubject"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/testIcon"
                    android:layout_width="20dp"
                    android:layout_marginLeft="@dimen/small_gap"
                    android:layout_height="20dp"
                    android:src="@drawable/baseline_library_books_24"
                    app:layout_constraintStart_toEndOf="@+id/subjectIcon"
                    app:layout_constraintTop_toBottomOf="@+id/subjectTitle"
                    app:layout_constraintEnd_toStartOf="@+id/numberSubject"
                    app:layout_constraintBottom_toTopOf="@+id/timeIcon"/>

                <TextView
                    android:id="@+id/numberSubject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/questions_default"
                    android:textSize="15dp"
                    style="@style/GilroyFontLight"
                    android:textStyle="bold"
                    android:textColor="@color/dark_gray"
                    app:layout_constraintStart_toEndOf="@+id/testIcon"
                    app:layout_constraintTop_toTopOf="@+id/testIcon"
                    app:layout_constraintBottom_toBottomOf="@+id/testIcon"/>

                <ImageView
                    android:id="@+id/timeIcon"
                    android:layout_width="20dp"
                    android:layout_marginLeft="@dimen/small_gap"
                    android:layout_height="20dp"
                    android:src="@drawable/baseline_access_time"
                    app:layout_constraintStart_toEndOf="@+id/subjectIcon"
                    app:layout_constraintTop_toBottomOf="@+id/testIcon"
                    app:layout_constraintEnd_toStartOf="@+id/timeSubject"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/timeSubject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_default"
                    android:textSize="15dp"
                    android:layout_marginLeft="5dp"
                    style="@style/GilroyFontLight"
                    android:textStyle="bold"
                    android:textColor="@color/dark_gray"
                    app:layout_constraintStart_toEndOf="@+id/timeIcon"
                    app:layout_constraintTop_toTopOf="@+id/timeIcon"
                    app:layout_constraintBottom_toBottomOf="@+id/timeIcon" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>